2010-01-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-00
	* first production version of ConfDB V1, including countless
	features, improvements and fixes by Vasu

2009-12-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-02-05
	* new functionality to get information about datasets and streams
	implemented by Ulf.

2009-11-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-02-04
	* data: add PrescaleService.prescales(pathName) interface,
	requested by Derek

2009-10-29  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-02-03
	* converter: adjust connect string as per request by Dave Dykstra
	* converter: OnlineConverter doesn't modify configuration anymore,
	as per TSG request
	* data: Stream contains a field 'fractionToDisk' now
	* gui: allow for the above field to be set
	* gui: OutputModule preview (text area at the bottom) properly
	updated
	* gui: don't allow OutputModules to be added to paths if the
	reference count is already larger than one (should probably be
	enforced in the datamodel of OutputModule)

2009-10-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-02-02
	* gui: fix background colors of cells in prescale table

2009-10-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-02-01
	* data: fix syncronization of outputCommands parameter in
	OutpuModule class, avoid duplicate entries
	* gui: correctly notify parameter nodes below output modules of
	changes
	* gui: display the number of output modules not yet assigned to
	any paths in parentheses, draw them red.

2009-10-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-02-00
	* fairly complete datamodel introducing EventContent and
	OutputModule and changing Stream and PrimaryDataset
	* fairly complete GUI interface to new datamodel, see below
	* CAUTION: no DB interface to new (parts of) datamodel yet, open
	existing configuration with care!!